# pubsub-project

./: .clang-format  .claudeignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  application-thread-and-itc-design.md  auth_service_test.py  build-fmt.sh  build-release-deploy.py  build-release-deploy.sh  build.py  build.sh  build_googletest.sh  check_standards.py  claude.md  coding-rules-for-ai-chatbots.txt  ct.sh  deploy.py  design-notes-for-ha.md  design-summary.txt  devenv.py  devsetup.py  devsetup.sh  docker-entrypoint.sh  easterly.py  excludes.txt  extra_macros.txt  fix_capture_test.py  get-flamegraph.sh  get-for-copilot.sh  ha_test.py  ignore-checks.txt  includes.txt  mainpage.dox  monitor_memory.py  notes-00-todo.txt  perf_run.py  (+14 more)
applications/: CMakeLists.txt  authentication.dsl  fix_equity_orders.dsl  topics.dsl
applications/arbiter/: Arbiter.cpp  Arbiter.hpp  ArbiterConfiguration.hpp  ArbiterConfigurationLoader.cpp  ArbiterConfigurationLoader.hpp  ArbiterThread.cpp  ArbiterThread.hpp  CMakeLists.txt  arbiter.toml  arbiter_secondary.toml
applications/authentication_service/: AuthenticationService.cpp  AuthenticationService.hpp  AuthenticationServiceConfiguration.hpp  AuthenticationServiceConfigurationLoader.cpp  AuthenticationServiceConfigurationLoader.hpp  AuthenticationThread.cpp  AuthenticationThread.hpp  CMakeLists.txt  ScramCrypto.cpp  ScramCrypto.hpp  admin.crt  admin.key  authentication_service.toml  authentication_service_secondary.toml  credentials.toml
applications/matching_engine/: CMakeLists.txt  MatchingEngine.cpp  MatchingEngine.hpp  MatchingEngineConfiguration.hpp  MatchingEngineConfigurationLoader.cpp  MatchingEngineConfigurationLoader.hpp  MatchingEngineThread.cpp  MatchingEngineThread.hpp  matching_engine.toml
applications/matching_engine_publisher/: CMakeLists.txt  MatchingEnginePublisher.cpp  MatchingEnginePublisher.hpp  MatchingEnginePublisherConfiguration.hpp  MatchingEnginePublisherConfigurationLoader.cpp  MatchingEnginePublisherConfigurationLoader.hpp  MatchingEnginePublisherThread.cpp  MatchingEnginePublisherThread.hpp  matching_engine_publisher.toml  matching_engine_publisher_secondary.toml
applications/order_gateway/: CMakeLists.txt  FixCapture.cpp  FixCapture.hpp  FixErEncoder.cpp  FixErEncoder.hpp  FixMessage.hpp  FixParser.cpp  FixParser.hpp  FixSerialiser.cpp  FixSerialiser.hpp  FixSession.hpp  OrderGateway.cpp  OrderGateway.hpp  OrderGatewayConfiguration.hpp  OrderGatewayConfigurationLoader.cpp  OrderGatewayConfigurationLoader.hpp  OrderGatewayThread.cpp  OrderGatewayThread.hpp  order_gateway.toml
applications/order_gateway/tests/: FixCaptureTest.cpp
applications/sample_fix_gateway/: CMakeLists.txt  FixGatewayConfiguration.hpp  FixGatewayConfigurationLoader.cpp  FixGatewayConfigurationLoader.hpp  FixGatewayThread.cpp  FixGatewayThread.hpp  FixMessage.hpp  FixParser.cpp  FixParser.hpp  FixSerialiser.cpp  FixSerialiser.hpp  FixSession.hpp  SampleFixGateway.cpp  SampleFixGateway.hpp  sample_fix_gateway.toml
applications/sample_fix_gateway_seq/: CMakeLists.txt  FixErEncoder.cpp  FixErEncoder.hpp  FixGatewaySeqConfiguration.hpp  FixGatewaySeqConfigurationLoader.cpp  FixGatewaySeqConfigurationLoader.hpp  FixGatewaySeqThread.cpp  FixGatewaySeqThread.hpp  FixMessage.hpp  FixParser.cpp  FixParser.hpp  FixSerialiser.cpp  FixSerialiser.hpp  FixSession.hpp  SampleFixGatewaySeq.cpp  SampleFixGatewaySeq.hpp  sample_fix_gateway_seq.toml
applications/sequencer/: CMakeLists.txt  Sequencer.cpp  Sequencer.hpp  SequencerConfiguration.hpp  SequencerConfigurationLoader.cpp  SequencerConfigurationLoader.hpp  SequencerThread.cpp  SequencerThread.hpp  SequencerWal.cpp  SequencerWal.hpp  sequencer.toml  sequencer_secondary.toml
applications/witness/: CMakeLists.txt  Witness.cpp  Witness.hpp  WitnessConfiguration.hpp  WitnessConfigurationLoader.cpp  WitnessConfigurationLoader.hpp  WitnessThread.cpp  WitnessThread.hpp  witness.toml
libraries/pubsub_itc_fw/: CMakeLists.txt
libraries/pubsub_itc_fw/integration_tests/: CMakeLists.txt  OutboundConnectionRetryIntegrationTest.cpp  PduBurstIntegrationTest.cpp  PduProtocolHandlerIntegrationTest.cpp  RawBytesBackPressureIntegrationTest.cpp  RawBytesProtocolHandlerIntegrationTest.cpp  RawBytesProtocolHandlerTest.cpp  StatusQueryResponseTest.cpp  TlsOutboundIntegrationTest.cpp  TlsProtocolHandlerIntegrationTest.cpp  VariableLengthPduTest.cpp  WalExternalSubscriberIntegrationTest.cpp  variable_length_test_protocol.dsl
libraries/pubsub_itc_fw/performance/: CMakeLists.txt  DslBenchMain.cpp  DslBenchProtocol.dsl
libraries/pubsub_itc_fw/src/: AcceptorHandler.cpp  ApplicationThread.cpp  CpuRegistry.cpp  Crc32.cpp  EmptySlabQueue.cpp  EventDistributor.cpp  EventMessage.cpp  ExpandablePoolAllocator.cpp  ExpandableSlabAllocator.cpp  FileSystemUtils.cpp  HighResolutionClock.cpp  InboundConnection.cpp  InboundConnectionManager.cpp  InetAddress.cpp  Logger.cpp  Message.cpp  MillisecondClock.cpp  MirroredBuffer.cpp  OutboundConnection.cpp  OutboundConnectionManager.cpp  PduFramer.cpp  PduParser.cpp  PduProtocolHandler.cpp  QuillLogger.cpp  RawBytesProtocolHandler.cpp  Reactor.cpp  SlabAllocator.cpp  StringUtils.cpp  TcpAcceptor.cpp  TcpConnector.cpp  TcpSocket.cpp  TimerHandler.cpp  TlsContext.cpp  TlsRawBytesProtocolHandler.cpp  (+6 more)
libraries/scram_crypto/: CMakeLists.txt  ScramCrypto.cpp  ScramCrypto.hpp
python/: .coverage  .coveragerc  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg
python/dsl/: ast.py  errors.py  generator_cpp.py  generator_java.py  generator_pybind11.py  lexer.py  parser.py  validator.py
python/tests/: test_bytes_type.py  test_char_enum.py  test_enum_ref_metadata.py  test_generator_cpp.py  test_generator_cpp_extra.py  test_generator_cpp_full_coverage.py  test_generator_java.py  test_generator_pybind11_coverage.py  test_lexer.py  test_lexer_extra.py  test_parser.py  test_parser_extra.py  test_roundtrip_nested_lists.py  test_topics.py  test_validator.py  test_validator_extra.py  utils.py
python/tools/: generate_cpp_from_dsl.py  generate_java_from_dsl.py
(+580 files in other folders)
