[metadata]
name = dsl-compiler
version = 0.1.0
description = A deterministic DSL-to-C++17 schema compiler
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    generate-cpp-from-dsl = tools.generate_cpp_from_dsl:main

[tool:pytest]
testpaths = tests
addopts = -q

[flake8]
max-line-length = 160
exclude = .git,__pycache__,build,dist

[pylint]
max-line-length = 160

[mypy]
python_version = 3.12.3
ignore_missing_imports = True
strict_optional = True
